--- a/index.html
+++ b/index.html
@@ -2,181 +2,165 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Kalb Hotel — Where Dogs Stay Like Royals</title>
-<meta name="description" content="Private suites, daily pampering, and round-the-clock supervision — so your best friend enjoys a five-star experience." />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Kalb Hotel — Boutique • Cage-Free • 24/7 Care</title>
+  <meta name="description" content="Private suites, daily pampering, and round-the-clock supervision — so your best friend enjoys a five-star experience.">
+  <link rel="icon" href="assets/logo.svg" type="image/svg+xml" />
+  <style>
+    :root{
+      --bg:#f7efe8;
+      --paper:#f3e6db;
+      --ink:#1e1b16;
+      --muted:#9a8a82;
+      --gold:#d7b07a;
+      --gold-deep:#c79a57;
+      --panel:#efe1d6;
+      --line:#e2d3c6;
+      --chip:#ede1d6;
+      --shadow: 0 8px 20px rgba(0,0,0,.06);
+      --radius: 18px;
+    }
+    *{box-sizing:border-box}
+    html,body{margin:0;padding:0;background:var(--bg);color:var(--ink);font-family: ui-serif, Georgia, "Times New Roman", Times, serif}
+    .wrap{
+      max-width: 1100px;
+      margin: 28px auto 48px;
+      padding: 18px 22px;
+      background: var(--paper);
+      border: 2px solid #e9dacc;
+      border-radius: 22px;
+      box-shadow: var(--shadow);
+    }
+    header{
+      display:flex;align-items:center;justify-content:space-between;
+      padding:8px 6px 4px;
+    }
+    .brand{
+      display:flex;align-items:center;gap:14px;
+      font-weight:700;font-size:28px;letter-spacing:.3px;
+    }
+    .brand-mark{
+      width:40px;height:40px;border-radius:50%;
+      border:2px solid var(--gold);display:grid;place-items:center;
+      font-family: ui-serif, Georgia, serif;font-weight:700;color:#b48a4f;background:#fff8f0;
+    }
+    .sub{font-size:12px;color:var(--muted);letter-spacing:.18em}
+    .langs{display:flex;gap:8px}
+    .chip{
+      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial;
+      font-size:12px;color:#6b625b;background:var(--chip);border:1px solid #e4d5c6;
+      padding:6px 10px;border-radius:999px;
+    }
+    .grid{
+      display:grid;grid-template-columns: 1.05fr 1fr;gap:28px;
+      padding:14px 6px 0;
+    }
+    h1{font-size:44px;line-height:1.08;margin:8px 0 8px;}
+    p.lead{font-size:15px;color:#6b625b;margin:0 0 16px}
+    .cta{display:flex;gap:12px;margin:14px 0 18px}
+    .btn{
+      border-radius:999px;border:1.5px solid var(--gold-deep);
+      padding:10px 18px;font-weight:700;font-size:14px;
+      background:#f1deca;box-shadow: inset 0 -2px 0 rgba(0,0,0,.05);
+    }
+    .btn.primary{
+      background:linear-gradient(#e5c79c, #d9b57d);
+      color:#2a241c;border-color:#bb9053;
+    }
+    .features{display:grid;gap:12px;margin-top:8px}
+    .card{
+      background:var(--panel);border:1.5px solid var(--line);border-radius:var(--radius);
+      padding:16px 18px;
+    }
+    .card h3{margin:0 0 6px;font-size:16px}
+    .card p{margin:0;color:#6b625b;font-size:13px}
+    .note{margin-top:12px;font-size:11px;color:#6b625b}
+    .for-sale{margin-top:18px;font-size:14px}
+    .for-sale a{color:#6b5b4f;text-decoration:none;border-bottom:1px solid #bfae9f}
 
-<link rel="icon" href="assets/logo.svg" type="image/svg+xml" />
+    /* תמונות */
+    .stack{display:grid;gap:18px}
+    .imgbox{
+      height:330px;border-radius:22px;overflow:hidden;background:#e7d4bf;
+      border:1.5px solid #e1d1c2;box-shadow: var(--shadow);
+    }
+    .imgbox img{
+      width:100%;height:100%;object-fit:cover;display:block;
+      image-rendering:auto;
+    }
+    /* כיוונון חיתוך מדויק */
+    #imgTop{object-position: 52% 20%;}
+    #imgBottom{object-position: 50% 52%;}
 
-<style>
-  :root{
-    --bg:#f6ebe3; /* רקע ורדרד בהיר (לפי התמונה) */
-    --card:#f1e3d7; /* מסגרות בהירות */
-    --ink:#1e1c1a; /* טקסט כהה */
-    --sub:#6f5f54; /* טקסט משני */
-    --cream:#f3e6da;
-    --ring:#e7d9c9;
-    --brand:#c7a784; /* זהוב עדין */
-    --shadow:0 1px 0 rgba(0,0,0,.06), 0 4px 12px rgba(0,0,0,.06);
-  }
-
-  *{box-sizing:border-box}
-  html,body{margin:0;height:100%}
-  body{
-    background:var(--bg);
-    color:var(--ink);
-    font:400 17px/1.6 ui-sans-serif, system-ui, -apple-system, Segoe UI, Arial, sans-serif;
-  }
-
-  .page{
-    max-width:1100px;
-    padding:28px 20px 40px;
-    margin:0 auto;
-  }
-
-  /* כרטיס ענק עם מסגרת עבה, כמו בצילום */
-  .panel{
-    background:#fff9f2;
-    border:2px solid #e8d6c4;
-    border-radius:20px;
-    padding:26px;
-    box-shadow: var(--shadow);
-  }
-
-  /* שורת מותג עם לוגו, שם ושפות */
-  .brand{ display:flex; align-items:center; gap:14px; }
-  .emblem{
-    width:44px; height:44px; border:2px solid var(--brand);
-    border-radius:50%; display:grid; place-items:center; color:var(--brand);
-    background:#fff7ef;
-  }
-  .emblem svg{ width:22px; height:22px; fill:currentColor }
-  .brandname{ font:700 28px/1 "Georgia", "Times New Roman", serif; margin:0; letter-spacing:.2px }
-  .subline{ color:var(--sub); font-weight:600; font-size:12px; letter-spacing:.08em; }
-
-  .lang{ margin-left:auto; display:flex; gap:8px; }
-  .lang button{
-    padding:7px 10px; border-radius:999px; border:1px solid var(--ring);
-    background:#eee4da; color:#6f5f54; font:600 12px/1 ui-sans-serif, system-ui;
-    cursor:default;
-  }
-
-  /* פריסת שתי עמודות */
-  .grid{ display:grid; grid-template-columns: 1.06fr .94fr; gap:26px; margin-top:18px; }
-  @media (max-width:960px){ .grid{ grid-template-columns:1fr; } }
-
-  /* צד שמאל – כותרות, טקסטים וכפתורים */
-  h2.title{
-    font:700 44px/1.12 "Georgia","Times New Roman",serif;
-    margin:10px 0 10px;
-  }
-  .lead{ color:#3c3530; max-width:46ch; }
-
-  .cta{ display:flex; gap:12px; margin:18px 0 10px; }
-  .cta a{
-    display:inline-block; padding:12px 18px; border-radius:999px;
-    border:1px solid var(--ring); text-decoration:none; font-weight:700;
-  }
-  .cta .primary{ background:#d9b78f; color:#2b241f; box-shadow:var(--shadow) }
-  .cta .ghost{ background:#fff7ef; color:#2b241f }
-
-  /* אריחי המאפיינים */
-  .features{ display:grid; gap:12px; max-width:520px; }
-  .feature{
-    background:var(--card); border:1px solid var(--ring); border-radius:14px;
-    padding:14px 16px; box-shadow: var(--shadow);
-  }
-  .feature h3{ margin:0 0 4px; font:700 16px/1.3 ui-sans-serif, system-ui }
-  .feature p{ margin:0; color:#5a514a; font-size:14px }
-
-  .domain{ margin-top:6px; color:#3a342f; font-weight:600; font-size:13px }
-  .domain a{ color:#3a342f; }
-
-  /* צד ימין – שתי תמונות בתוך קלפים מעוגלים */
-  .stack{ display:grid; gap:18px; }
-  .dog{
-    width:100%;
-    aspect-ratio: 4 / 3;
-    border-radius:18px; overflow:hidden;
-    background:#ddd; border:1px solid var(--ring); box-shadow:var(--shadow);
-  }
-  .dog img{ width:100%; height:100%; object-fit:cover; display:block; image-rendering:auto; }
-  /* מיקומים כדי לא לחתוך ראשים */
-  .dog--maltese img{ object-position:50% 32%; } /* מרים מעט */
-  .dog--pomeranian img{ object-position:50% 38%; } /* מרים יותר */
-
-  /* פוטר תחתון כמו בתמונה */
-  .fineprint{
-    margin-top:18px; color:#5e554e; font-size:13px;
-  }
-</style>
+    @media (max-width: 900px){
+      .grid{grid-template-columns:1fr;gap:22px}
+      .imgbox{height:300px}
+      h1{font-size:38px}
+    }
+  </style>
 </head>
 <body>
-  <div class="page">
-    <div class="panel">
-      <!-- שורת לוגו + שם + שפות -->
-      <div class="brand">
-        <div class="emblem" aria-hidden="true">
-          <!-- אייקון כלבי דמוי-קו -->
-          <svg viewBox="0 0 24 24"><path d="M6.6 12.3c-1.3-1.8-.9-4.2 1-5.5 1.8-1.3 4.4-.8 5.7 1.1.5-.7 1.4-1.2 2.3-1.2 1.7 0 3 1.3 3 3 0 .6-.2 1.1-.5 1.6 1 .7 1.7 1.9 1.7 3.2 0 2.2-1.8 4-4 4H10c-2.6 0-3.9-1.7-4.2-3.2-.2-.9.1-1.8.8-2.4z"/></svg>
+  <main class="wrap">
+    <header>
+      <div>
+        <div class="brand">
+          <div class="brand-mark">K</div>
+          <div>Kalb Hotel</div>
         </div>
-        <div>
-          <h1 class="brandname">Kalb Hotel</h1>
-          <div class="subline">BOUTIQUE · CAGE-FREE · 24/7 CARE</div>
-        </div>
-        <div class="lang"><button>EN</button><button>HE</button><button>AR</button></div>
+        <div class="sub">BOUTIQUE · CAGE-FREE · 24/7 CARE</div>
       </div>
+      <div class="langs">
+        <span class="chip">EN</span>
+        <span class="chip">HE</span>
+        <span class="chip">AR</span>
+      </div>
+    </header>
 
-      <!-- שתי עמודות -->
-      <div class="grid">
-        <!-- שמאל -->
-        <div>
-          <h2 class="title">Where dogs<br />stay like royals.</h2>
-          <p class="lead">Private suites, daily pampering, and round-the-clock supervision—so your best friend enjoys a five-star experience.</p>
+    <section class="grid">
+      <!-- צד שמאל: טקסט וקופסאות -->
+      <div>
+        <h1>Where dogs<br/>stay like royals.</h1>
+        <p class="lead">
+          Private suites, daily pampering, and round-the-clock supervision — so your best
+          friend enjoys a five-star experience.
+        </p>
 
-          <div class="cta">
-            <a class="primary" href="https://wa.me/"><b>Call / WhatsApp</b></a>
-            <a class="ghost" href="#"><b>Contact Us</b></a>
+        <div class="cta">
+          <button class="btn primary">Call / WhatsApp</button>
+          <button class="btn">Contact Us</button>
+        </div>
+
+        <div class="features">
+          <div class="card">
+            <h3>Luxury Suites</h3>
+            <p>Elegant, climate-controlled rooms with plush furnishings.</p>
           </div>
-
-          <div class="features">
-            <div class="feature">
-              <h3>Luxury Suites</h3>
-              <p>Elegant, climate-controlled rooms with plush furnishings.</p>
-            </div>
-            <div class="feature">
-              <h3>Daily Activities</h3>
-              <p>Spa treatments, play sessions, and enrichment.</p>
-            </div>
-            <div class="feature">
-              <h3>24/7 Supervision</h3>
-              <p>Attentive staff ensuring safety and comfort.</p>
-            </div>
+          <div class="card">
+            <h3>Daily Activities</h3>
+            <p>Spa treatments, play sessions, and enrichment.</p>
           </div>
-
-          <div class="domain">Domain For Sale · <a href="https://kalbhotel.com">kalbhotel.com</a></div>
+          <div class="card">
+            <h3>24/7 Supervision</h3>
+            <p>Attentive staff ensuring safety and comfort.</p>
+          </div>
         </div>
 
-        <!-- ימין: שתי תמונות -->
-        <div class="stack">
-          <figure class="dog dog--maltese">
-            <img src="assets/dogs/maltese_suite.jpg" alt="Small white dog with a satin bow on a plush ottoman">
-          </figure>
-          <figure class="dog dog--pomeranian">
-            <img src="assets/dogs/pomeranian_glam.jpg" alt="Fluffy pomeranian on a gold armchair in a pastel room">
-          </figure>
-        </div>
+        <div class="for-sale">Domain For Sale · <a href="https://kalbhotel.com">kalbhotel.com</a></div>
+        <div class="note">Designed to meet global hospitality standards. Kalb Hotel is sought-after by discerning dog owners and partners.</div>
       </div>
 
-      <!-- שורת תחתית קטנה -->
-      <div class="fineprint">
-        Designed to meet global hospitality standards. Kalb Hotel is sought-after by discerning dog owners and partners.
+      <!-- צד ימין: שתי תמונות -->
+      <div class="stack">
+        <figure class="imgbox">
+          <img id="imgTop" src="assets/dogs/maltese_suite.jpg" alt="Small white dog with a satin bow on a plush ottoman">
+        </figure>
+        <figure class="imgbox">
+          <img id="imgBottom" src="assets/dogs/pomeranian_glam.jpg" alt="Fluffy pomeranian on a gold armchair in a pastel room">
+        </figure>
       </div>
-    </div>
-  </div>
-
-  <!-- !force rebuild -->
+    </section>
+  </main>
 </body>
 </html>
 
