--- a/index.html
+++ b/index.html
@@ -1,166 +1,296 @@
-
 <!doctype html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Kalb Hotel — Boutique • Cage-Free • 24/7 Care</title>
-  <meta name="description" content="Private suites, daily pampering, and round-the-clock supervision — so your best friend enjoys a five-star experience.">
+  <title>Kalb Hotel — Boutique, Cage-Free • 24/7 Care</title>
+  <meta name="description" content="Kalb Hotel is a luxury, cage-free dog hotel. Private suites, daily enrichment, and round-the-clock professional supervision—so your best friend enjoys a true vacation." />
   <link rel="icon" href="assets/logo.svg" type="image/svg+xml" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
   <style>
     :root{
-      --bg:#f7efe8;
-      --paper:#f3e6db;
-      --ink:#1e1b16;
-      --muted:#9a8a82;
-      --gold:#d7b07a;
-      --gold-deep:#c79a57;
-      --panel:#efe1d6;
-      --line:#e2d3c6;
-      --chip:#ede1d6;
-      --shadow: 0 8px 20px rgba(0,0,0,.06);
-      --radius: 18px;
+      --bg: #faf6f5;          /* שמנתי-ורדרד עדין */
+      --bg-2:#fff;
+      --ink:#2b2b2b;
+      --muted:#6a6a6a;
+      --brand:#c59b5f;        /* זהב רך */
+      --pill:#f0e5df;         /* פסטל נוסף */
+      --accent:#e8d8d2;       /* ורדרד מאוד עדין */
+      --card:#ffffffb3;       /* לבן שקוף קלות */
+      --shadow: 0 10px 30px rgba(0,0,0,.08);
+      --radius:22px;
     }
     *{box-sizing:border-box}
-    html,body{margin:0;padding:0;background:var(--bg);color:var(--ink);font-family: ui-serif, Georgia, "Times New Roman", Times, serif}
-    .wrap{
-      max-width: 1100px;
-      margin: 28px auto 48px;
-      padding: 18px 22px;
-      background: var(--paper);
-      border: 2px solid #e9dacc;
-      border-radius: 22px;
-      box-shadow: var(--shadow);
+    html,body{margin:0;background:
+      radial-gradient(1200px 600px at 85% 10%, #fff 0%, var(--bg) 55%, #f7efe9 100%);
+      font-family:Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      color:var(--ink)
     }
-    header{
-      display:flex;align-items:center;justify-content:space-between;
-      padding:8px 6px 4px;
-    }
+    a{color:inherit;text-decoration:none}
+    .wrap{max-width:1100px;margin:0 auto;padding:28px 20px 60px}
+    header{display:flex;align-items:center;justify-content:space-between;gap:16px}
     .brand{
-      display:flex;align-items:center;gap:14px;
-      font-weight:700;font-size:28px;letter-spacing:.3px;
+      display:flex;align-items:center;gap:14px
     }
-    .brand-mark{
-      width:40px;height:40px;border-radius:50%;
-      border:2px solid var(--gold);display:grid;place-items:center;
-      font-family: ui-serif, Georgia, serif;font-weight:700;color:#b48a4f;background:#fff8f0;
+    .brand-logo{
+      width:42px;height:42px;border-radius:50%;
+      background:linear-gradient(145deg,#fff, #f5ede7);
+      border:2px solid var(--brand);
+      display:grid;place-items:center;box-shadow:var(--shadow);
+      overflow:hidden;
     }
-    .sub{font-size:12px;color:var(--muted);letter-spacing:.18em}
-    .langs{display:flex;gap:8px}
-    .chip{
-      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial;
-      font-size:12px;color:#6b625b;background:var(--chip);border:1px solid #e4d5c6;
-      padding:6px 10px;border-radius:999px;
+    .brand-logo img{width:100%;height:100%;object-fit:cover}
+    .brand-name{
+      font-family:"Playfair Display", serif;
+      font-weight:700;letter-spacing:.3px;
+      font-size:34px;line-height:1;
     }
-    .grid{
-      display:grid;grid-template-columns: 1.05fr 1fr;gap:28px;
-      padding:14px 6px 0;
+    .badge{
+      display:inline-flex;gap:8px;align-items:center;
+      padding:6px 12px;border-radius:999px;
+      background:var(--pill); color:#5a524c; font-weight:600; font-size:12px
     }
-    h1{font-size:44px;line-height:1.08;margin:8px 0 8px;}
-    p.lead{font-size:15px;color:#6b625b;margin:0 0 16px}
-    .cta{display:flex;gap:12px;margin:14px 0 18px}
-    .btn{
-      border-radius:999px;border:1.5px solid var(--gold-deep);
-      padding:10px 18px;font-weight:700;font-size:14px;
-      background:#f1deca;box-shadow: inset 0 -2px 0 rgba(0,0,0,.05);
+    .lang{
+      display:flex; gap:8px;
+      background:var(--acc); padding:4px; border-radius:999px;
+      background:var(--accent);
+      box-shadow:var(--shadow)
     }
-    .btn.primary{
-      background:linear-gradient(#e5c79c, #d9b57d);
-      color:#2a241c;border-color:#bb9053;
+    .lang button{
+      border:0; background:transparent; padding:8px 12px; border-radius:999px;
+      font-weight:600; cursor:pointer; color:#5a524c
     }
-    .features{display:grid;gap:12px;margin-top:8px}
+    .lang button.active{ background:var(--brand); color:#fff }
+
+    .hero{
+      margin-top:20px; display:grid; grid-template-columns: 1.15fr .85fr; gap:24px;
+    }
     .card{
-      background:var(--panel);border:1.5px solid var(--line);border-radius:var(--radius);
-      padding:16px 18px;
+      background:var(--card); border:1px solid #eee; border-radius:var(--radius);
+      box-shadow:var(--shadow);
     }
-    .card h3{margin:0 0 6px;font-size:16px}
-    .card p{margin:0;color:#6b625b;font-size:13px}
-    .note{margin-top:12px;font-size:11px;color:#6b625b}
-    .for-sale{margin-top:18px;font-size:14px}
-    .for-sale a{color:#6b5b4f;text-decoration:none;border-bottom:1px solid #bfae9f}
+    .panel{ padding:26px 26px 22px }
+    .title{
+      font-family:"Playfair Display", serif; font-weight:700;
+      font-size:46px; line-height:1.1; margin:8px 0 12px;
+    }
+    .lead{ color:var(--muted); font-size:16.5px; }
 
-    /* תמונות */
-    .stack{display:grid;gap:18px}
-    .imgbox{
-      height:330px;border-radius:22px;overflow:hidden;background:#e7d4bf;
-      border:1.5px solid #e1d1c2;box-shadow: var(--shadow);
+    .cta-row{ display:flex; gap:12px; margin-top:18px; flex-wrap:wrap }
+    .btn{
+      display:inline-flex; align-items:center; justify-content:center; gap:10px;
+      padding:12px 18px; border-radius:12px; border:1px solid var(--brand);
+      font-weight:700; cursor:pointer; transition:.2s ease; text-align:center
     }
-    .imgbox img{
-      width:100%;height:100%;object-fit:cover;display:block;
-      image-rendering:auto;
+    .btn.primary{ background:var(--brand); color:#fff; border-color:transparent }
+    .btn.primary:hover{ filter:saturate(1.05) brightness(1.02) }
+    .btn.ghost{ background:#fff; color:#4b423a }
+    .pillbar{ display:grid; gap:12px; padding:18px }
+    .pill{
+      background:linear-gradient(180deg,#fff, #fbf7f5);
+      border:1px solid #eee; border-radius:16px; padding:16px 18px; box-shadow:var(--shadow)
     }
-    /* כיוונון חיתוך מדויק */
-    #imgTop{object-position: 52% 20%;}
-    #imgBottom{object-position: 50% 52%;}
+    .pill b{ display:block; font-size:13px; opacity:.85; margin-bottom:6px }
+    .pill p{ margin:0; color:#5f5a55; font-size:14px }
 
-    @media (max-width: 900px){
-      .grid{grid-template-columns:1fr;gap:22px}
-      .imgbox{height:300px}
-      h1{font-size:38px}
+    .gallery{ display:grid; gap:16px; grid-template-columns:1fr; }
+    .dog{
+      border-radius:18px; overflow:hidden; aspect-ratio: 4/3;
+      box-shadow:var(--shadow); border:1px solid #eee; background:#f7f2ee
+    }
+    .dog img{ width:100%; height:100%; object-fit:cover; display:block }
+
+    .grid-2{ display:grid; grid-template-columns:1fr 1fr; gap:16px }
+
+    .section{ margin-top:26px; padding:18px 24px }
+    .section h3{ margin:0 0 10px; font-size:18px; letter-spacing:.2px }
+    .section p{ margin:0; color:#5b5753 }
+
+    footer{
+      margin-top:30px; padding:18px; text-align:center; color:#7a7068; font-size:13px
+    }
+
+    /* RTL / LTR toggling */
+    [dir="rtl"] .hero{ grid-template-columns: .85fr 1.15fr }
+    [dir="rtl"] .title{ letter-spacing:0 }
+    [dir="rtl"] .lead{ font-size:17px }
+    @media (max-width: 980px){
+      .hero{ grid-template-columns:1fr; }
+      .title{ font-size:40px }
+      .brand-name{ font-size:30px }
     }
   </style>
 </head>
 <body>
-  <main class="wrap">
+  <div class="wrap">
     <header>
-      <div>
-        <div class="brand">
-          <div class="brand-mark">K</div>
-          <div>Kalb Hotel</div>
+      <div class="brand">
+        <div class="brand-logo">
+          <!-- אפשר להחליף בתמונה פרוותית מהממת -->
+          <img src="assets/dogs/pompom.jpg" alt="Kalb Hotel" onerror="this.style.display='none'">
         </div>
-        <div class="sub">BOUTIQUE · CAGE-FREE · 24/7 CARE</div>
+        <div>
+          <div class="brand-name">Kalb Hotel</div>
+          <div class="badge" data-i="badge">Boutique • Cage-Free • 24/7 Care</div>
+        </div>
       </div>
-      <div class="langs">
-        <span class="chip">EN</span>
-        <span class="chip">HE</span>
-        <span class="chip">AR</span>
+
+      <div class="lang" aria-label="Language">
+        <button data-lang="en" class="active">EN</button>
+        <button data-lang="ar">AR</button>
+        <button data-lang="he">HE</button>
       </div>
     </header>
 
-    <section class="grid">
-      <!-- צד שמאל: טקסט וקופסאות -->
-      <div>
-        <h1>Where dogs<br/>stay like royals.</h1>
-        <p class="lead">
-          Private suites, daily pampering, and round-the-clock supervision — so your best
-          friend enjoys a five-star experience.
+    <main class="hero">
+      <!-- left: main content -->
+      <section class="card panel">
+        <h1 class="title" data-i="headline">Where dogs stay like royals.</h1>
+        <p class="lead" data-i="lede">
+          Kalb Hotel is a luxury, cage-free dog hotel. Private suites, daily enrichment, and round-the-clock professional supervision—so your best friend enjoys a true vacation.
         </p>
 
-        <div class="cta">
-          <button class="btn primary">Call / WhatsApp</button>
-          <button class="btn">Contact Us</button>
+        <div class="cta-row">
+          <a class="btn primary" href="mailto:info@kalbhotel.com" data-i="cta1">Contact us</a>
+          <a class="btn ghost" href="https://wa.me/0000000000" target="_blank" rel="noopener" data-i="cta2">Call / WhatsApp</a>
         </div>
 
-        <div class="features">
-          <div class="card">
-            <h3>Luxury Suites</h3>
-            <p>Elegant, climate-controlled rooms with plush furnishings.</p>
+        <div class="grid-2 section card" style="background:linear-gradient(180deg,#fff,#fcf7f4);">
+          <div class="pill">
+            <b data-i="h_lux">Luxury Suites</b>
+            <p data-i="p_lux">Climate-controlled, daily housekeeping, calm ambience.</p>
           </div>
-          <div class="card">
-            <h3>Daily Activities</h3>
-            <p>Spa treatments, play sessions, and enrichment.</p>
+          <div class="pill">
+            <b data-i="h_daily">Daily Activities</b>
+            <p data-i="p_daily">Walks, play sessions, enrichment & gentle training.</p>
           </div>
-          <div class="card">
-            <h3>24/7 Supervision</h3>
-            <p>Attentive staff ensuring safety and comfort.</p>
+          <div class="pill">
+            <b data-i="h_super">24/7 Supervision</b>
+            <p data-i="p_super">Experienced handlers and continuous monitoring.</p>
+          </div>
+          <div class="pill">
+            <b data-i="h_world">Worldwide Concept</b>
+            <p data-i="p_world">Designed to meet global hospitality standards.</p>
           </div>
         </div>
 
-        <div class="for-sale">Domain For Sale · <a href="https://kalbhotel.com">kalbhotel.com</a></div>
-        <div class="note">Designed to meet global hospitality standards. Kalb Hotel is sought-after by discerning dog owners and partners.</div>
-      </div>
+        <section class="section card">
+          <h3 data-i="about_h">About the brand</h3>
+          <p data-i="about_p">
+            Kalb Hotel is a trusted, elegant brand for discerning dog owners and partners.
+          </p>
+        </section>
 
-      <!-- צד ימין: שתי תמונות -->
-      <div class="stack">
-        <figure class="imgbox">
-          <img id="imgTop" src="assets/dogs/maltese_suite.jpg" alt="Small white dog with a satin bow on a plush ottoman">
-        </figure>
-        <figure class="imgbox">
-          <img id="imgBottom" src="assets/dogs/pomeranian_glam.jpg" alt="Fluffy pomeranian on a gold armchair in a pastel room">
-        </figure>
-      </div>
-    </section>
-  </main>
+        <section class="section card">
+          <h3 data-i="contact_h">Contact</h3>
+          <p>
+            <span data-i="contact_p">Partnerships & bookings:</span>
+            <a href="mailto:info@kalbhotel.com">info@kalbhotel.com</a>
+            &nbsp;•&nbsp; Domain: <a href="https://kalbhotel.com" target="_blank" rel="noopener">kalbhotel.com</a>
+          </p>
+        </section>
+
+        <section class="section card" style="border:1px dashed var(--brand)">
+          <h3 data-i="for_sale_h">Premium Domain Available</h3>
+          <p data-i="for_sale_p">
+            This premium domain is available for acquisition. Inquiries from luxury hospitality, pet-care and investment groups are welcome.
+          </p>
+        </section>
+      </section>
+
+      <!-- right: gallery -->
+      <aside class="gallery">
+        <div class="dog"><img src="assets/dogs/poodle_elegant.jpg" alt="Elegant poodle"></div>
+        <div class="dog"><img src="assets/dogs/pomeranian_glam.jpg" alt="Glam pomeranian"></div>
+        <div class="dog"><img src="assets/dogs/maltese_suite.jpg" alt="Maltese in suite"></div>
+      </aside>
+    </main>
+
+    <footer>© Kalb Hotel. All rights reserved.</footer>
+  </div>
+
+  <script>
+    // --- language packs ---
+    const i18n = {
+      en: {
+        badge: "Boutique • Cage-Free • 24/7 Care",
+        headline: "Where dogs stay like royals.",
+        lede: "Kalb Hotel is a luxury, cage-free dog hotel. Private suites, daily enrichment, and round-the-clock professional supervision—so your best friend enjoys a true vacation.",
+        cta1: "Contact us",
+        cta2: "Call / WhatsApp",
+        h_lux:"Luxury Suites", p_lux:"Climate-controlled, daily housekeeping, calm ambience.",
+        h_daily:"Daily Activities", p_daily:"Walks, play sessions, enrichment & gentle training.",
+        h_super:"24/7 Supervision", p_super:"Experienced handlers and continuous monitoring.",
+        h_world:"Worldwide Concept", p_world:"Designed to meet global hospitality standards.",
+        about_h:"About the brand",
+        about_p:"Kalb Hotel is a trusted, elegant brand for discerning dog owners and partners.",
+        contact_h:"Contact",
+        contact_p:"Partnerships & bookings:",
+        for_sale_h:"Premium Domain Available",
+        for_sale_p:"This premium domain is available for acquisition. Inquiries from luxury hospitality, pet-care and investment groups are welcome."
+      },
+      ar: {
+        badge: "فندق راقٍ • بدون أقفاص • رعاية 24/7",
+        headline: "حيث تقيم الكلاب مثل الملوك.",
+        lede: "Kalb Hotel فندق فاخر للكلاب بدون أقفاص. أجنحة خاصة، تنشيط يومي، وإشراف مهني على مدار الساعة — كي يحظى صديقك بإجازة حقيقية.",
+        cta1: "تواصل معنا",
+        cta2: "اتصال / واتساب",
+        h_lux:"أجنحة فاخرة", p_lux:"تحكم بالمناخ، تنظيف يومي، أجواء هادئة.",
+        h_daily:"أنشطة يومية", p_daily:"نزهات ولعب وتنشيط وتدريب لطيف.",
+        h_super:"إشراف 24/7", p_super:"مشرفون ذوو خبرة ومتابعة مستمرة.",
+        h_world:"مفهوم عالمي", p_world:"مصمم وفق معايير الضيافة العالمية.",
+        about_h:"عن العلامة",
+        about_p:"Kalb Hotel علامة أنيقة وموثوقة لأصحاب الكلاب المميزين وشركائهم.",
+        contact_h:"التواصل",
+        contact_p:"الشراكات والحجوزات:",
+        for_sale_h:"اسم نطاق مميز للبيع",
+        for_sale_p:"اسم النطاق هذا متاح للاستحواذ. نرحب باستفسارات مجموعات الضيافة الفاخرة ورعاية الحيوانات والمستثمرين."
+      },
+      he: {
+        badge:"בוטיק • ללא כלובים • השגחה 24/7",
+        headline:"מקום שהכלב מרגיש בו מלך.",
+        lede:"Kalb Hotel הוא פנסיון יוקרה לכלבים ללא כלובים. סוויטות פרטיות, העשרה יומית והשגחה מקצועית מסביב לשעון — כדי שחברכם ייהנה מחופשה אמיתית.",
+        cta1:"דברו איתנו",
+        cta2:"שיחה / וואטסאפ",
+        h_lux:"סוויטות יוקרה", p_lux:"בקרת אקלים, ניקיון יומי ואווירה רגועה.",
+        h_daily:"פעילות יומית", p_daily:"טיולים, משחקים, העשרה ואימון עדין.",
+        h_super:"השגחה 24/7", p_super:"צוות מנוסה ומעקב רציף.",
+        h_world:"קונספט עולמי", p_world:"מעוצב לפי סטנדרטים בינלאומיים של אירוח.",
+        about_h:"על המותג",
+        about_p:"Kalb Hotel הוא מותג אלגנטי ואמין לבעלי כלבים אניני טעם ולשותפים.",
+        contact_h:"יצירת קשר",
+        contact_p:"שיתופי פעולה והזמנות:",
+        for_sale_h:"דומיין פרימיום למכירה",
+        for_sale_p:"הדומיין זמין לרכישה. נשמח לפניות מגופי אירוח יוקרה, פט-קייר ומשקיעים."
+      }
+    };
+
+    function applyLang(lang){
+      const pack = i18n[lang] || i18n.en;
+      document.documentElement.lang = lang;
+      document.documentElement.dir = (lang === 'ar' || lang === 'he') ? 'rtl' : 'ltr';
+      document.querySelectorAll('[data-i]').forEach(el=>{
+        const key = el.getAttribute('data-i');
+        if(pack[key]) el.textContent = pack[key];
+      });
+      document.querySelectorAll('.lang button').forEach(b=>{
+        b.classList.toggle('active', b.dataset.lang===lang);
+      });
+    }
+
+    // Auto-detect
+    (function(){
+      const nav = (navigator.language || navigator.userLanguage || 'en').toLowerCase();
+      let lang = 'en';
+      if(nav.startsWith('he')) lang = 'he';
+      if(nav.startsWith('ar')) lang = 'ar';
+      applyLang(lang);
+    })();
+
+    // Manual toggle
+    document.querySelectorAll('.lang button').forEach(btn=>{
+      btn.addEventListener('click', ()=>applyLang(btn.dataset.lang));
+    });
+  </script>
 </body>
 </html>
-
